<resources>
    <string name="app_name">AutosDB</string>
    <string name="comentarios">Comentarios</string>
    <string name="anadir_coche">Añadir coche</string>
    <string name="editar_coche">Editar coche</string>
    <string name="matricula">Matrícula</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="fecha_matricula">Fecha matr.</string>
    <string name="color">Color</string>
    <string name="electrico">¿Eléctrico?</string>
    <string name="tipo_coche">Tipo de coche:</string>
    <string name="sedan">Sedán</string>
    <string name="suv">SUV</string>
    <string name="otro">Otro</string>
    <string name="hecho">Hecho</string>
    <string name="eliminar">Eliminar</string>
    <string name="error_get_coche">Ha ocurrido un error al obtener el coche</string>
    <string name="error_get_conductor">Ha ocurrido un error al obtener el conductor</string>
    <string name="coche_guardado_exito">El coche ha sido guardado con exito</string>
    <string name="conductor_guardado_exito">El conductor ha sido guardado con exito</string>
    <string name="error_guardar">Ha ocurrido un error al guardar</string>
    <string name="coche_eliminado_exito">El coche ha sido eliminado con exito</string>
    <string name="conductor_eliminado_exito">El conductor ha sido eliminado con exito</string>
    <string name="error_eliminar">Ha ocurrido un error al eliminar</string>
    <string name="page_1">Coches</string>
    <string name="page_2">Conductores</string>
    <string name="coche_nombre">%1$s %2$s</string>
    <string name="anadir_conductor">Añadir Conductor</string>
    <string name="conductor_nombre">%1$s %2$s</string>
    <string name="nombre">Nombre</string>
    <string name="dni">DNI</string>
    <string name="anadir">Añadir</string>
    <string name="editar_conductor">Editar Conductor</string>
    <string name="apellidos">Apellidos</string>
    <string name="masculino">M</string>
    <string name="femenino">F</string>
    <string name="genero">Género:</string>
    <string name="telefono">Teléfono</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="conductores">Conductores</string>
    <string name="gestionar_conductores">Gestionar conductores</string>
    <string name="ir_a_conductores">Ir a conductores</string>
    <string name="sin_conductores_disponibles">Sin conductores disponibles</string>
    <string name="todos_los_conductores_asignados">No hay más conductores para asignar a este coche</string>
    <string name="seleccionar_conductor">Seleccionar conductor</string>
    <string name="desasignar_conductor">Desasignar conductor</string>
    <string name="confirmar_desasignar_conductor">¿Desea desasignar a %1$s %2$s de este coche?</string>
    <string name="desasignar">Desasignar</string>
    <string name="cancelar">Cancelar</string>
    <string name="sin_coches_disponibles">Sin coches disponibles</string>
    <string name="todos_los_coches_asignados">No hay más coches para asignar a este conductor</string>
    <string name="seleccionar_coche">Seleccionar coche</string>
    <string name="desasignar_coche">Desasignar coche</string>
    <string name="confirmar_desasignar_coche">¿Desea desasignar %1$s %2$s de este conductor?</string>
    <string name="gestionar_coches">Gestionar coches</string>
    <string name="ir_a_coches">Ir a coches</string>
    <string name="date_picker_tag">DATE_PICKER</string>
    <string name="date_format_iso">yyyy-MM-dd</string>
    <string name="titulo_coches">Coches</string>
    <string name="titulo_conductores">Conductores</string>
    <string name="titulo_editar_coche">Editar Coche</string>
    <string name="titulo_editar_conductor">Editar Conductor</string>
    <string name="titulo_anadir_coche">Añadir Coche</string>
    <string name="titulo_anadir_conductor">Añadir Conductor</string>
    <string name="titulo_conductores_del_coche">Conductores</string>
    <string name="titulo_coches_del_conductor">Coches</string>
    <string name="titulo">Título</string>
    <string name="cuerpo">Cuerpo</string>
    <string name="id_usuario">ID Usuario</string>
    <string name="character_image">Imagen del juego</string>
    <string name="search_hint">Busca un juego</string>

</resources>