<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/cochesMainFragment">

    <fragment
        android:id="@+id/cochesMainFragment"
        android:name="com.example.navigation.ui.coches.main.CochesMainFragment"
        android:label="@string/titulo_coches"
        tools:layout="@layout/fragment_coches_main" >
        <action
            android:id="@+id/action_cochesMainFragment_to_cochesEditFragment"
            app:destination="@id/cochesEditFragment" />
        <action
            android:id="@+id/action_cochesMainFragment_to_cochesNewFragment"
            app:destination="@id/cochesNewFragment" />
    </fragment>
    <fragment
        android:id="@+id/conductoresMainFragment"
        android:name="com.example.navigation.ui.conductores.main.ConductoresMainFragment"
        android:label="@string/titulo_conductores"
        tools:layout="@layout/fragment_conductores_main" >
        <action
            android:id="@+id/action_conductoresMainFragment_to_conductoresEditFragment"
            app:destination="@id/conductoresEditFragment" />
        <action
            android:id="@+id/action_conductoresMainFragment_to_conductoresAddFragment"
            app:destination="@id/conductoresAddFragment" />
    </fragment>
    <fragment
        android:id="@+id/cochesEditFragment"
        android:name="com.example.navigation.ui.coches.edit.CochesEditFragment"
        android:label="@string/titulo_editar_coche"
        tools:layout="@layout/fragment_coches_edit" >
        <argument
            android:name="matricula"
            app:argType="string" />
        <action
            android:id="@+id/action_cochesEditFragment_to_cochesEditConductoresFragment"
            app:destination="@id/cochesEditConductoresFragment" />
    </fragment>
    <fragment
        android:id="@+id/cochesNewFragment"
        android:name="com.example.navigation.ui.coches.add.CochesAddFragment"
        android:label="@string/titulo_anadir_coche"
        tools:layout="@layout/fragment_coches_add" >
        <action
            android:id="@+id/action_cochesNewFragment_to_cochesEditConductoresFragment"
            app:destination="@id/cochesEditConductoresFragment" />
    </fragment>
    <fragment
        android:id="@+id/conductoresEditFragment"
        android:name="com.example.navigation.ui.conductores.edit.ConductoresEditFragment"
        android:label="@string/titulo_editar_conductor"
        tools:layout="@layout/fragment_conductores_edit" >
        <argument
            android:name="dni"
            app:argType="string" />
        <action
            android:id="@+id/action_conductoresEditFragment_to_conductoresEditCochesFragment"
            app:destination="@id/conductoresEditCochesFragment" />
    </fragment>
    <fragment
        android:id="@+id/conductoresAddFragment"
        android:name="com.example.navigation.ui.conductores.add.ConductoresAddFragment"
        android:label="@string/titulo_anadir_conductor"
        tools:layout="@layout/fragment_conductores_add" />
    <fragment
        android:id="@+id/cochesEditConductoresFragment"
        android:name="com.example.navigation.ui.coches.conductores.CochesEditConductoresFragment"
        android:label="@string/titulo_conductores_del_coche"
        tools:layout="@layout/fragment_coches_edit_conductores" >
        <argument
            android:name="matricula"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/conductoresEditCochesFragment"
        android:name="com.example.navigation.ui.conductores.coches.ConductoresEditCochesFragment"
        android:label="@string/titulo_coches_del_conductor"
        tools:layout="@layout/fragment_conductores_edit_coches" >
        <argument
            android:name="dni"
            app:argType="string" />
    </fragment>
</navigation>